# Practical.AI

./: README.md
AmazonBedrock/: README.md
AmazonBedrock/Practical.AmazonBedrock/: Practical.AmazonBedrock.sln
Azure AI Content Safety/Practical.AzureAIContentSafety/: Practical.AzureAIContentSafety.slnx
Azure Document Intelligence/Practical.AzureDocumentIntelligence/: Practical.AzureDocumentIntelligence.slnx
CsvHelper/: CsvHelper.sln
CsvHelper/CsvHelper/: CsvReader.cs  CsvWriter.cs  DataTableExtensions.cs
CsvHelper/CsvHelper.Tests/: CsvHelper.Tests.csproj  CsvReaderTests.cs  DataTableExtensionsTests.ToCsv_ShouldWriteCsvToStream.verified.txt  DataTableExtensionsTests.cs
Image Analysis/Practical.AzureComputerVision/: Practical.AzureComputerVision.sln
MarkItDown/app/: main.py
MarkItDownDotNet/: MarkItDownDotNet.sln
MarkItDownDotNet/MarkItDownDotNet/: md.py  (+1 more)
MarkItDownDotNet/MarkItDownDotNet.Client/: Program.cs
MarkItDownDotNet/MarkItDownDotNet.Demo/: MarkItDownDotNet.Demo.csproj  Program.cs
MarkItDownDotNet/MarkItDownDotNet.Installer/: MarkItDownDotNet.Installer.csproj  Program.cs  requirements.txt
MarkItDownDotNet/MarkItDownDotNet.Server/: FileService.cs  MarkItDownDotNet.Server.csproj  Program.cs  appsettings.json
OpenAI/python/: .env.example  .gitignore  README.md  pyproject.toml
OpenAI/python/src/practical_openai/: __init__.py  main.py
OpenAI/python/tests/: test_main.py
Tokenizers/: Practical.Tokenizers.sln
VectorData/: README.md
VideoAnalysers/: Practical.VideoAnalysers.sln
docs/: AI and Vector Data Extensions.pptx
(+86 files in other folders)
