[project]
name = "practical-openai"
version = "0.1.0"
description = "A minimal LangChain application using OpenAI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3,<2",
    "langchain-openai>=0.3,<2",
    "python-dotenv>=1.0,<2",
]

[project.scripts]
practical-openai = "practical_openai.main:main"

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "ruff>=0.11,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/practical_openai"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

